--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div> --->
 				<div class="content" >
 					<div class="inner">
-						<img src="images/pics.JPG" />
+						<span><img src="images/pics.JPG" /></span>
 						<h1>Ahmed Mazloum</h1>
 						<p>B.S. in Computer Science from The University of Michigan</p>
 
@@ -38,7 +38,7 @@
 				</nav>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/ahmed-mazloum-90a009198" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/Amaz21" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/AhmedMazloum" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				</ul>
 			</header>
 
@@ -103,12 +103,12 @@
 					<div id="project1">
 						<br><h3>UML Builder Website(HTML, CSS, JavaScript)</h3>
 						<figure class="half2" style="display:flex">
-							<img src="images/uml.jpg" alt="" />
+							<span><img src="images/uml.jpg" alt="" /></span>
 						</figure>
 						
 						<br><h3 class="major">About</h3>
 						<p>
-							The UML Class Diagram Builder is an online graphical tool used to aid in the design and creation of UML class diagrams. Actions, such as, name, variables, and functions make creating classes a simple process for all users. At the completion of the classes, users are taken to a view page screen that presents users with their completed classes with the option to print their classes. Check it out <a href="https://github.com/Amaz21/UML-Class-Diagram-Builder">here.</a>
+							The UML Class Diagram Builder is an online graphical tool used to aid in the design and creation of UML class diagrams. Actions, such as, name, variables, and functions make creating classes a simple process for all users. At the completion of the classes, users are taken to a view page screen that presents users with their completed classes with the option to print their classes. Check it out <a href="https://github.com/AhmedMazloum/UML-Class-Diagram-Builder">here.</a>
 						</p>
 					</div>
 
@@ -122,7 +122,7 @@
 						</figure>
 						<br><h3 class="major">About</h3>
 						<p>
-							This project finds the MST of a graph using the greedy algorithm Prim's and also finds the shortest path of the graph using Dijkstra’s algorithm. Check it out <a href="https://github.com/Amaz21/Minimum-Spanning-Tree">here.</a>
+							This project finds the MST of a graph using the greedy algorithm Prim's and also finds the shortest path of the graph using Dijkstra’s algorithm. Check it out <a href="https://github.com/AhmedMazloum/Minimum-Spanning-Tree">here.</a>
 						</p>
 
 
@@ -136,7 +136,7 @@
 						</figure>
 						<br><h3 class="major">About</h3>
 						<p>
-							The Chat Room is a client-server chat room that allows back-and-forth communication between users on different devices that are connected to the same IP address. Check it out <a href="https://github.com/Amaz21/Client--Server-Chat-Room">here.</a>
+							The Chat Room is a client-server chat room that allows back-and-forth communication between users on different devices that are connected to the same IP address. Check it out <a href="https://github.com/AhmedMazloum/Client--Server-Chat-Room">here.</a>
 						</p>
 					</div>
 
@@ -149,7 +149,7 @@
 
 						<br><h3 class="major">About</h3>
 						<p>
-							The Sudoku Solver solves any Sudoku Puzzle by visualizing through the Backtracking Algorithm. Check it out <a href="https://github.com/Amaz21/Sudoku-solver-backtracking-algorithm">here.</a>
+							The Sudoku Solver solves any Sudoku Puzzle by visualizing through the Backtracking Algorithm. Check it out <a href="https://github.com/AhmedMazloum/Sudoku-solver-backtracking-algorithm">here.</a>
 						</p>
 					</div>
 
@@ -162,7 +162,7 @@
 
 						<br><h3 class="major">About</h3>
 							<p>
-								The Weather App uses an API to display the current weather and 5 day forecast in real time based on the current users location. Check it out <a href="https://github.com/Amaz21/Weather-App">here.</a>
+								The Weather App uses an API to display the current weather and 5 day forecast in real time based on the current users location. Check it out <a href="https://github.com/AhmedMazloum/Weather-App">here.</a>
 							</p>
 					</div>
 
