--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div id="project1">
 						<br><h3>UML Builder Website(HTML, CSS, JavaScript)</h3>
 						<figure class="half2" style="display:flex">
-							<img src="images/uml.jpg" alt="" />
+							<img src="images/uml.JPG" alt="" />
 						</figure>
 						
 						<br><h3 class="major">About</h3>
