--- a/index.html
+++ b/index.html
@@ -50,16 +50,21 @@
 					<h2>Hi, I'm Ahmed</h2>
 
 					<p>
-						I'm a currently a senior at the University of Michigan studying computer science! I have a true passionate for technology and I'm currently looking for full time entry level postions in software engineering, project managment, and data science/engineering.
-						I have experiacne in project management and web devolopment through pior internship I've had. Click <a href="#Experience"> here</a> if you would like to check out my work experience.
-					</p>
-					<p>
-						Also, I have done projects that have exposed me and gave me experience to many different areas in computer science and software devlopment like mobile app development, computer networking , data structures and algorithms, and web development.
-						If you would like you can check out my projects <a href="#project"> here</a>
+						I'm a currently a senior at the University of Michigan, majoring in Computer Science. I'm looking for a full time/entry level postion in software engineering, project managment, or data science.
 					</p>
 
 					<p>
-						You can reach me at amazloum@umich.edu or at my linkedin.
+						Perviously, I was a project manager at General Electric Aviation and a web developer at Great Lakes Wealth. Click <a href="#Experience"> here</a> to check out my work experience!
+					</p>
+					</p>
+					<p>
+
+						I have done projects in many areas of Computer Science, including but not limited to; mobile app development, computer networking, data structures, algorithms, and web development.
+						Click <a href="#project"> here</a> to check out my some of my projects!
+					</p>
+
+					<p>
+						Feel free to contact me at amazloum@umich.edu or on Linkedin.
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/ahmed-mazloum-90a009198" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
@@ -73,7 +78,7 @@
 					<h2 class="major">Work Experience</h2>
 					<span class="image main"></span>
 					<h3 class="major">Experience </h3>
-					<h3>GE Aviation</h3>
+					<h3>General Electric Aviation</h3>
 					<h4>Project Management Intern</h4>
 					<h5>May 2021 - August 2021</h5>
 					<p>
@@ -101,37 +106,39 @@
 					<h2 class="major">Projects</h2>
 
 					<div id="project1">
-						<br><h3>UML Builder Website(HTML, CSS, JavaScript)</h3>
+						<br><h3>UML Builder Website - HTML, CSS, JavaScript</h3>
 						<figure class="half2" style="display:flex">
 							<img src="images/uml.JPG" alt="" />
 						</figure>
 						
 						<br><h3 class="major">About</h3>
-						<p>
-							The UML Class Diagram Builder is an online graphical tool used to aid in the design and creation of UML class diagrams. Actions, such as, name, variables, and functions make creating classes a simple process for all users. At the completion of the classes, users are taken to a view page screen that presents users with their completed classes with the option to print their classes. Check it out <a href="https://github.com/AhmedMazloum/UML-Class-Diagram-Builder">here.</a>
-						</p>
+							<p>
+								The Unified Modeling Language - Class Builder is an online graphical tool used to aid in the design and creation of UML class diagrams. At the completion of the classes, users are taken to the view page that presents their completed classes, with the option to print them. Check it out <a href="https://github.com/AhmedMazloum/UML-Class-Diagram-Builder">here</a>
+							</p>
 					</div>
 
 
 
 					<div id="project2">
-						<br><h3>Dynamic Minimum Spanning Tree Project (Java)</h3>
-						<img src="images/MST1.png" alt="" />
+						<br><h3>Dynamic MST Project - Java</h3>
+						<figure class="mst">
+						<img src="images/MST3.jpg" />
+							</figure>
 						<figure class="half" style="display:flex">
-							<img src="images/MST3.jpg" />
+							<img src="images/MST1.png" alt="" />
 						</figure>
 						<br><h3 class="major">About</h3>
 						<p>
-							This project finds the MST of a graph using the greedy algorithm Prim's and also finds the shortest path of the graph using Dijkstra’s algorithm. Check it out <a href="https://github.com/AhmedMazloum/Minimum-Spanning-Tree">here.</a>
+							This project finds the Minimum Spanning Tree of a graph using Prim's greedy algorithm and also finds the shortest path using Dijkstra’s algorithm. Check it out <a href="https://github.com/AhmedMazloum/Minimum-Spanning-Tree">here.</a>
 						</p>
 
 
 					</div>
 
 					<div id="project3">
-						<br><h3>Chat Room (JavaFX, Sockets)</h3>
+						<br><h3>Chat Room - JavaFX, Sockets</h3>
 
-						<figure class="half" style="display:flex">
+						<figure class="half4" style="display:flex">
 							<img src="images/chat.jpg" alt="" />
 						</figure>
 						<br><h3 class="major">About</h3>
@@ -141,8 +148,8 @@
 					</div>
 
 					<div id="project4">
-						<h3>Sudoku Backtracking Project (C++)</h3>
-						<figure class="half" style="display:flex">
+						<h3>Sudoku Backtracking Project - C++</h3>
+						<figure class="half5" style="display:flex">
 							<img src="images/sudoku1.png" alt="" />
 							<img src="images/sudoku2.jpg" />
 						</figure>
@@ -154,7 +161,7 @@
 					</div>
 
 					<div id="project5">
-						<br><h3>Weather App(Kotlin, Android Studios)</h3>
+						<br><h3>Weather App - Kotlin, Android Studios</h3>
 			
 						<figure class="half1" style="display:flex">
 							<img src="images/weather.jpeg" alt="" />
